[package]
name = "secure-mceliece-stream"
version = "0.1.0"
edition = "2024"
authors = ["Raja Lehtihet", "Wael El Oraiby"]
license = "MIT"
description = "Post-quantum secure communication streams using McEliece cryptosystem"
repository = "https://github.com/eloraiby/secure-mceliece-stream"
keywords = [
    "post-quantum",
    "mceliece",
    "encryption",
    "secure-communication",
    "async",
]
categories = ["cryptography", "network-programming", "asynchronous"]

[dependencies]
classic-mceliece-rust = { version = "3.1", features = ["mceliece348864f"] }
aes-gcm = "0.10"
rand = "0.9"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
